--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/adminportal
 spring.thymeleaf.cache=false
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/wve
+spring.datasource.url=jdbc:mysql://localhost:3306/sharebuddy
 
 spring.datasource.username=root
 spring.datasource.password=1234
@@ -22,4 +22,4 @@ spring.jpa.generate-ddl=true
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
+ 
